# Numberic-Method-dll

./: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix_Protected.cpp  Matrix_Public.cpp  Matrix_Wrap.cpp  Matrix_Wrap.h
Vectors/: Vector.h  Vector_Private.cpp  Vector_Public.cpp
